# cordial-public

./: .gitignore  README.md  README.txt
autostart_scripts/: start_cordial_face.sh  start_cordial_face_nuc.sh  start_cordial_face_pi.sh
cordial_behavior/: CMakeLists.txt  package.xml
cordial_behavior/action/: Behavior.action  Behaviors.action  LongBehavior.action
cordial_behavior/msg/: Behavior.msg
cordial_behavior/scripts/: behaviors.py
cordial_behavior/scripts/default_name/: cordial_face_expression.json
cordial_behavior/src/cordial_behavior/: behaviors_server.py
cordial_core/: CMakeLists.txt  manifest.xml
cordial_core/scripts/: player.py
cordial_core/src/: robot_manager.py
cordial_core/src/cordial_core/: __init__.py  robot_manager.py
cordial_detector/launch/: detector.launch
cordial_detector/scripts/: detector.py
cordial_dialogue/: CMakeLists.txt  package.xml  setup.py
cordial_dialogue/launch/: dialogue.launch
cordial_dialogue/scripts/: dialogue.py
cordial_example/: CoRDial_behaviors.json  README.txt  manifest.xml
cordial_example/launch/: test_setup.launch
cordial_example/scripts/: otf_node.py  otf_tts.py  robot_only.py
cordial_example/speech/: gen_audio.sh  script.txt
cordial_face/: CMakeLists.txt  manifest.xml  package.xml
cordial_face/msg/: FaceRequest.msg
cordial_face/scripts/: face_keyframe_server.py  setup_http_servers.sh
cordial_face/web/: CoRDial_over_ROS.html  KiwiEditor.html  KiwiGL.html  KiwiLite.html  KiwiLiteEditor.html  chili.html  chiliGL.html  index.html  kiwi.html
cordial_face/web/js/: convert_to_ROS_image.js  face.js  facecontrol.js  newface.js  svgFace.js
cordial_lex/: CMakeLists.txt  package.xml  setup.py
cordial_lex/config/: configuration.yaml
cordial_lex/launch/: lex_demo.launch
cordial_lex/scripts/: audio_input.py  audio_output.py
cordial_logger/launch/: logger.launch  rosbag_launcher.launch  rosbag_record.launch
cordial_logger/scripts/: recorded_data.py
cordial_manager/: CMakeLists.txt  package.xml
cordial_manager/action/: Interaction.action  Manager.action
cordial_manager/launch/: decision_manager.launch  interaction_manager.launch  manager.launch  modules.launch
cordial_manager/msg/: PlayRequest.msg
cordial_manager/scripts/: decision_manager.py  interaction_manager.py  manager.py
cordial_manager/scripts/data/: actions.json  interactions.json  test.json
cordial_manager/srv/: PlayAudio.srv
cordial_sensor/launch/: sensor.launch
cordial_sensor/scripts/: sensor.py
cordial_sound/: CMakeLists.txt  manifest.xml  package.xml
cordial_sound/scripts/: soundplay_node.py  test.py
cordial_sound/src/cordial_sound/: __init__.py  libsoundplay.py
cordial_sound/src/sound_play/: libsoundplay.py
cordial_sprite/: CMakeLists.txt  manifest.xml
cordial_sprite/scripts/: dummy_robot_node.py  sprite_control_node.py  sprite_cordial_node.py
cordial_tablet/: CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
cordial_tablet/msg/: AddRemoveArea.msg  ChangeToken.msg
cordial_tablet/web/js/: cordial_game.js  cordial_game.js~
cordial_tts/: CMakeLists.txt  LICENSE  README.md  manifest.xml  package.xml  setup.py
cordial_tts/action/: Synthesize.action
cordial_tts/scripts/: gen_phrases.py  otf_node.py  tts.py
cordial_tts/src/: cordial_tts.py
cordial_tts/src/cordial_tts/: __init__.py  cordial_tts.py  gen_phrases.py
