<package>
  <name>cordial_lex</name>
  <version>0.1.2</version>
  <description >

     Interface to use CoRDial with Amazon Lex Services

  </description>
  <author>Elaine Short</author>
  <maintainer email="prmehta24@gmail.com">Micol Spitale</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/cordial_lex</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aws_common</build_depend>
  <build_depend>aws_ros1_common</build_depend>
  <build_depend>lex_common</build_depend>
  <build_depend>lex_common_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cordial_tts</build_depend>

  <run_depend>aws_common</run_depend>
  <run_depend>aws_ros1_common</run_depend>
  <run_depend>lex_common</run_depend>
  <run_depend>lex_common_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cordial_tts</run_depend>
</package>


